# binance-assignment

./: .env.example  .gitignore  AGENTS.md  Makefile  PRODUCT.md  README.md  TASKS.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  AGENTS.md  Dockerfile  alembic.ini  binance_assignment.db  binance_assignment.db-journal  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/api/: dashboard.py  dependencies.py  schemas.py  stream.py
backend/app/binance/: __init__.py  dto.py  errors.py  interfaces.py  rest.py  websocket.py
backend/app/domain/: __init__.py  market_data.py
backend/app/models/: __init__.py  market_data.py
backend/app/repositories/: __init__.py  interfaces.py  sqlalchemy_market_data.py
backend/app/services/: backfill.py  collector.py  dashboard.py  events.py  gaps.py  recovery.py  runtime.py  status.py  stream.py
backend/migrations/: README.md  env.py
backend/migrations/versions/: 20260714_0001_create_market_data_tables.py
backend/tests/: test_binance_rest_client.py  test_binance_websocket_collector.py  test_dashboard_api.py  test_dashboard_stream.py  test_event_history.py  test_gap_detection.py  test_health.py  test_initial_backfill.py  test_market_data_repository.py  test_migrations.py  test_restart_recovery.py  test_runtime_orchestration.py  test_runtime_status_service.py
docs/: 00-project-guidelines.md  01-requirements-and-scope.md  02-architecture.md  03-data-collection-design.md  04-backfill-and-recovery.md  05-storage-design.md  06-dashboard-design.md  07-testing-strategy.md  08-ai-collaboration-log.md  09-reviewer-walkthrough.md
frontend/: .dockerignore  AGENTS.md  Dockerfile  package-lock.json  package.json  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx  (+1 more)
scripts/: bootstrap.sh  check.sh  recovery-drill.sh  reset-db.sh  smoke.sh  test.sh
(+18 files in other folders)
