[project]
name = "binance-assignment-backend"
version = "0.1.0"
description = "FastAPI backend for Binance market data operations console"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.16.0,<2.0.0",
    "fastapi>=0.116.0,<0.117.0",
    "httpx>=0.28.0,<0.29.0",
    "pydantic-settings>=2.10.0,<3.0.0",
    "psycopg[binary]>=3.2.0,<4.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "uvicorn[standard]>=0.35.0,<0.36.0",
]

[dependency-groups]
dev = [
    "mypy>=1.16.0,<2.0.0",
    "pytest>=8.4.0,<9.0.0",
    "ruff>=0.12.0,<0.13.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = []

[[tool.mypy.overrides]]
module = ["pydantic_settings.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
